--- a/1_SCRIPTS/3_Testing/static/css/components/forms.css
+++ b/1_SCRIPTS/3_Testing/static/css/components/forms.css
@@ -5,7 +5,7 @@
     display:flex;
     flex-direction: column;
     overflow:hidden;
-    z-index: 1000;
+    z-index: 4;
     
     /* SIZING */
     width: 300px;
@@ -62,7 +62,6 @@
     padding: 10px 15px;
 
     /* STYLING */
-    transition: 0.3s;
     color: white;
     text-decoration: none;
     font-size: 25px;
@@ -138,7 +137,6 @@ border-radius: 3px; /* Optional: rounded corners for the input */
     background-color: #f9f9f9;
     width: 80px;
     box-shadow: 20px 20px 20px 20px rgba(0, 0, 0, 0.2);
-    z-index: 1000;
     border-radius: 3px;
 
   }
@@ -160,7 +158,7 @@ border-radius: 3px; /* Optional: rounded corners for the input */
 
 
   .uploadImageMenu {
-    z-index: 1001;
+    z-index: 5;
     min-height: 300px;;
   }
 
