--- a/1_SCRIPTS/3_Testing/static/css/layout.css
+++ b/1_SCRIPTS/3_Testing/static/css/layout.css
@@ -7,14 +7,12 @@
     padding: 8px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    z-index: 100;
     text-align: center;
 }
 
 .header {
   position: relative;
   padding: 20px;
-  z-index: 100;  
 }
 
 
