--- a/1_SCRIPTS/3_Testing/static/css/style.css
+++ b/1_SCRIPTS/3_Testing/static/css/style.css
@@ -36,13 +36,13 @@ html {
     height: 100%;
     width: var(--sidebar_width);
     background-color: var(--default_color);
-    z-index: 2000;
+    z-index: 3;
     position: relative 
 }
 #dashboard {
     /* background-color: var(--default_color);  */
     /* PROPERTIES and INDEX*/
-    z-index: 1000; /* High enough to be on top of other elements */
+    z-index: 3; /* High enough to be on top of other elements */
     position: relative;
 
     /* SIZING */
@@ -114,7 +114,7 @@ html {
     background-size: cover;
     box-shadow: -2px -2px 5px rgba(0, 0, 0, 0.3); /* Shadow to the left side */
     /* border-radius: 10px; */
-    z-index: 10002; /* Ensures it's above the A-Frame scene */
+    z-index: 4; /* Ensures it's above the A-Frame scene */
     border-top: 1px solid #000; 
     padding: 0;
     transition: 0.4s;
@@ -126,7 +126,7 @@ html {
     background-color: var(--transitionNode);
     border-radius: 50%;
     border: 1px solid grey; /* Add a grey border */
-    z-index: 10001;
+    z-index: 4;
 }
 
 
@@ -151,7 +151,7 @@ html {
     border: 3px solid var(--popupLightColor);
     border-radius: 15px;
     overflow: auto;
-    z-index: 1000; /* High z-index to be above other content */
+    z-index: 5; /* High z-index to be above other content */
     color: var(--popupDarkColor);
 }
 .popup-header {
@@ -219,7 +219,7 @@ html {
     -webkit-backdrop-filter: blur(5px); /* This creates the blur effect for other browsers */
     backdrop-filter: blur(5px); /* This creates the blur effect for firefox */
     display: none; /* Hidden by default */
-    z-index: 999; /* Ensure it's below the popup but above other content */
+    z-index: 4; /* Ensure it's below the popup but above other content */
 }
 
 
@@ -249,7 +249,7 @@ opacity: 1; /* Fully visible */
     height: 100%;
     width: 30%; /* 30 when open, 3 when closd */
     background-color: var(--background);
-    z-index: 1001;
+    z-index: 3;
     transition: width 0.3s ease;
 
     /* flexbox styles https://www.youtube.com/watch?v=phWxA89Dy94 */
@@ -278,14 +278,14 @@ opacity: 1; /* Fully visible */
     /* grid styles https://www.youtube.com/watch?v=EiNiSFIPIQE */
     display: grid;
     grid-template-columns: 1fr;
-    z-index: 1001;
+    z-index: 3;
     scrollbar-gutter: 4px;
     overflow-y: auto;
     grid-auto-rows: 1;
 }
 
 .sidebar-item {
-    z-index: 1003;
+    z-index: 3;
     background-color: var(--background); 
     border-bottom: var(--bottom-border-styles);
     padding-left: 7%;
@@ -315,7 +315,7 @@ opacity: 1; /* Fully visible */
     border-top: 8px solid transparent;
     border-bottom: 8px solid transparent;
     border-right: 0px;
-    z-index: 1003;  
+    z-index: 2;  
 }
 
 
